<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Groupe Informatique TechSolCom.
     TechSolCom Group.All rights reserved.

     author : Emmanuel Soume
     date : 06/01/2012
     version : 1.0
     Compagny : Techsolcom
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" 
    android:scrollbars="horizontal|vertical">

    <!-- content -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/nameCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="25dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="50"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iconCode"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/messageInfoMeteo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="60" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/texteHumidite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25" 
                android:text="@string/humidity"/>

            <TextView
                android:id="@+id/humidite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="left"/>

            <TextView
                android:id="@+id/texteVent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="25" 
                android:text="@string/vent"/>

            <TextView
                android:id="@+id/vent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/textePression"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/pressure"/>

            <TextView
                android:id="@+id/pression"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="left" />

            <TextView
                android:id="@+id/texteVisibilite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="25"
                android:text="@string/visibility"/>

            <TextView
                android:id="@+id/visibilite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iconMeteoToday"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

                <TextView
                    android:id="@+id/temperatureToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/nextFirstDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iconMeteoNextFirstDay"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

                <TextView
                    android:id="@+id/temperatureNextFirstDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="34"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/nextSecondDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iconMeteoNextSecondDay"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

                <TextView
                    android:id="@+id/temperatureNextSecondDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>